operator/config/istio/ap.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: controller-manager
  namespace: system
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
          - /metrics
  selector:
    matchLabels:
      app.kubernetes.io/component: module-manager.kyma-project.io
